ipc/ipdl/test/ipdl/ok/union_Namespaced.ipdl
namespace kitties {

union Socks {
    int;
    double;
};

} // namespace kitties


namespace puppies {

protocol union_Namespaced {
child:
    Msg(Socks s);
};

} // namespace puppies
