ipc/ipdl/test/ipdl/error/array_Recursive.ipdl
//error: bad syntax near `['

protocol array_Recursive {
child: async Msg(int[][] aa);
};
